--- a/tp3/submitter.properties
+++ b/tp3/submitter.properties
@@ -1,3 +1,3 @@
 #Submitter per project properties
-#Tue Sep 04 15:10:01 CEST 2018
-selectedNode=jnews_NFP121/tp3_question1_evaluation
+#Sun Mar 24 17:40:49 EET 2019
+selectedNode=jnews_NFP121/resultats_question1
